syntax = "proto3";
package seiprotocol.seichain.nitro;

import "gogoproto/gogo.proto";

option go_package = "github.com/sei-protocol/sei-chain/x/nitro/types";

message TransactionData {
  uint64 slot = 1 [
    (gogoproto.jsontag) = "slot"
  ];
  string signature = 2 [
    (gogoproto.jsontag) = "signature"
  ];
  bool is_vote = 3 [
    (gogoproto.jsontag) = "is_vote"
  ];
  uint64 message_type = 4 [
    (gogoproto.jsontag) = "message_type"
  ];
  LegacyMessage legacy_message = 5 [
    (gogoproto.jsontag) = "legacy_message"
  ];
  LoadedMessage v0_loaded_message = 6 [
    (gogoproto.jsontag) = "v0_loaded_message"
  ];
  repeated string signatures = 7 [
    (gogoproto.jsontag) = "signatures"
  ];
  string message_hash = 8 [
    (gogoproto.jsontag) = "message_hash"
  ];
  uint64 write_version = 9 [
    (gogoproto.jsontag) = "write_version"
  ];
}

message LegacyMessage {
  MessageHeader header = 1 [
    (gogoproto.jsontag) = "header"
  ];
  repeated string account_keys = 2 [
    (gogoproto.jsontag) = "account_keys"
  ];
  string recent_blockhash = 3 [
    (gogoproto.jsontag) = "recent_blockhash"
  ];
  repeated CompiledInstruction instructions = 4 [
    (gogoproto.jsontag) = "instructions"
  ];
}

message LoadedMessage {
  Message message = 1 [
    (gogoproto.jsontag) = "message"
  ];
  LoadedAddresses loaded_addresses = 2 [
    (gogoproto.jsontag) = "loaded_addresses"
  ];
}

message Message {
  MessageHeader header = 1 [
    (gogoproto.jsontag) = "header"
  ];
  repeated string account_keys = 2 [
    (gogoproto.jsontag) = "account_keys"
  ];
  string recent_blockhash = 3 [
    (gogoproto.jsontag) = "recent_blockhash"
  ];
  repeated CompiledInstruction instructions = 4 [
    (gogoproto.jsontag) = "instructions"
  ];
  repeated MessageAddressTableLookup address_table_lookups = 5 [
    (gogoproto.jsontag) = "address_table_lookups"
  ];
}

message MessageHeader {
  uint32 num_required_signatures = 1 [
    (gogoproto.jsontag) = "num_required_signatures"
  ];
  uint32 num_readonly_signed_accounts = 2 [
    (gogoproto.jsontag) = "num_readonly_signed_accounts"
  ];
  uint32 num_readonly_unsigned_accounts = 3 [
    (gogoproto.jsontag) = "num_readonly_unsigned_accounts"
  ];
}

message CompiledInstruction {
  uint32 program_id_index = 1 [
    (gogoproto.jsontag) = "program_id_index"
  ];
  repeated uint32 accounts = 2 [
    (gogoproto.jsontag) = "accounts"
  ];
  string data = 3 [
    (gogoproto.jsontag) = "data"
  ];
}

message MessageAddressTableLookup {
  string account_key = 1 [
    (gogoproto.jsontag) = "account_key"
  ];
  repeated uint32 writable_indexes = 2 [
    (gogoproto.jsontag) = "writable_indexes"
  ];
  repeated uint32 readonly_indexes = 3 [
    (gogoproto.jsontag) = "readonly_indexes"
  ];
}

message LoadedAddresses {
  repeated string writable = 1 [
    (gogoproto.jsontag) = "writable"
  ];
  repeated string readonly = 2 [
    (gogoproto.jsontag) = "readonly"
  ];
}

message MerkleProof {
  string commitment = 1 [
    (gogoproto.jsontag) = "commitment"
  ];
  repeated string hash = 2 [
    (gogoproto.jsontag) = "hash"
  ];
  repeated int64 direction = 3 [
    (gogoproto.jsontag) = "direction"
  ];
}
